--- a/explore.ipynb
+++ b/explore.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,27 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['RA', 'DEC', 'TARGETID', 'DESI_TARGET', 'BGS_TARGET', 'MWS_TARGET', 'PRIORITY_INIT', 'SUBPRIORITY', 'NUMOBS_INIT', 'NUMOBS_MORE', 'PRIORITY', 'OBSCONDITIONS']\n",
-      "['TARGETID', 'MOCKID', 'TRUEZ', 'TRUESPECTYPE', 'TEMPLATETYPE', 'TEMPLATESUBTYPE', 'TEMPLATEID', 'SEED', 'MAG', 'MAGFILTER', 'FLUX_G', 'FLUX_R', 'FLUX_Z', 'FLUX_W1', 'FLUX_W2', 'FLUX_W3', 'FLUX_W4']\n",
-      "TARGETID\n",
-      "BGS_ANY 1131685\n",
-      "ELG 4555445\n",
-      "LRG 850729\n",
-      "QSO 505981\n",
-      "STD_FAINT 148247\n",
-      "STD_BRIGHT 70682\n",
-      "STD_WD 7236\n",
-      "writing truth\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#truth file\n",
     "truthfile = \"targets/truth.fits\"\n",
@@ -159,11 +141,11 @@
     "    nothing = '          '\n",
     "    truth['TEMPLATESUBTYPE'] = np.repeat(nothing, nobj)\n",
     "\n",
-    "    masks = ['BGS_ANY', 'ELG', 'LRG', 'QSO', 'STD_FAINT', 'STD_BRIGHT', 'STD_WD']\n",
+    "    masks = ['ELG', 'LRG', 'QSO', 'MWS_ANY', 'BGS_ANY', 'STD_FAINT', 'STD_BRIGHT']\n",
     "    dict_truespectype = {'BGS_ANY':'GALAXY', 'ELG':'GALAXY', 'LRG':'GALAXY', 'QSO':'QSO', \n",
-    "                    'STD_FAINT':'STAR', 'STD_BRIGHT':'STAR', 'STD_WD':'STAR'}\n",
+    "                    'MWS_ANY':'STAR', 'STD_FAINT':'STAR', 'STD_BRIGHT':'STAR'}\n",
     "    dict_truetemplatetype = {'BGS_ANY':'BGS', 'ELG':'ELG', 'LRG':'LRG', 'QSO':'QSO', \n",
-    "                        'STD_FAINT':'STAR', 'STD_BRIGHT':'STAR', 'STD_WD':'STAR'}\n",
+    "                        'MWS_ANY':'STAR', 'STD_FAINT':'STAR', 'STD_BRIGHT':'STAR'}\n",
     "\n",
     "    for m in masks:\n",
     "        istype = (targets['DESI_TARGET'] & desi_mask.mask(m))!=0\n",
@@ -172,82 +154,13 @@
     "        truth['TEMPLATETYPE'][istype] = np.repeat(dict_truetemplatetype[m], np.count_nonzero(istype))\n",
     "        truth['MOCKID'][istype] = targets['TARGETID'][istype]\n",
     "\n",
-    "    del targets\n",
+    "    # Check that all targets have been assigned to a class\n",
+    "    iii = truth['MOCKID']==0\n",
+    "    assert np.count_nonzero(iii)==0\n",
+    "    \n",
     "    print('writing truth')\n",
     "    truth.write(truthfile, overwrite=True)\n",
     "    print('done truth')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "&lt;Table length=8353255&gt;\n",
-       "<table id=\"table46913787836008\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>TARGETID</th><th>MOCKID</th><th>TRUEZ</th><th>TRUESPECTYPE</th><th>TEMPLATETYPE</th><th>TEMPLATESUBTYPE</th><th>TEMPLATEID</th><th>SEED</th><th>MAG</th><th>MAGFILTER</th><th>FLUX_G</th><th>FLUX_R</th><th>FLUX_Z</th><th>FLUX_W1</th><th>FLUX_W2</th><th>FLUX_W3</th><th>FLUX_W4</th></tr></thead>\n",
-       "<thead><tr><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>mag</th><th></th><th>nanomaggies</th><th>nanomaggies</th><th>nanomaggies</th><th>nanomaggies</th><th>nanomaggies</th><th>nanomaggies</th><th>nanomaggies</th></tr></thead>\n",
-       "<thead><tr><th>int64</th><th>int64</th><th>float32</th><th>str10</th><th>str10</th><th>str10</th><th>int32</th><th>int64</th><th>float32</th><th>str15</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th></tr></thead>\n",
-       "<tr><td>0</td><td>0</td><td>0.0</td><td></td><td></td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>0</td><td>0</td><td>0.0</td><td></td><td></td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>0</td><td>0</td><td>0.0</td><td></td><td></td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>0</td><td>0</td><td>0.0</td><td></td><td></td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>0</td><td>0</td><td>0.0</td><td></td><td></td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>0</td><td>0</td><td>0.0</td><td></td><td></td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>0</td><td>0</td><td>0.0</td><td></td><td></td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>0</td><td>0</td><td>0.0</td><td></td><td></td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>0</td><td>0</td><td>0.0</td><td></td><td></td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
-       "<tr><td>0</td><td>0</td><td>0.0</td><td></td><td></td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>0</td><td>0</td><td>0.0</td><td></td><td></td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>0</td><td>0</td><td>0.0</td><td></td><td></td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>0</td><td>0</td><td>0.0</td><td></td><td></td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>0</td><td>0</td><td>0.0</td><td></td><td></td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>0</td><td>0</td><td>0.0</td><td></td><td></td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>0</td><td>0</td><td>0.0</td><td></td><td></td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>0</td><td>0</td><td>0.0</td><td></td><td></td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>0</td><td>0</td><td>0.0</td><td></td><td></td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "<tr><td>0</td><td>0</td><td>0.0</td><td></td><td></td><td></td><td>-1</td><td>-1</td><td>0.0</td><td></td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<Table length=8353255>\n",
-       "TARGETID MOCKID  TRUEZ  TRUESPECTYPE ...   FLUX_W2     FLUX_W3     FLUX_W4  \n",
-       "                                     ... nanomaggies nanomaggies nanomaggies\n",
-       " int64   int64  float32    str10     ...   float32     float32     float32  \n",
-       "-------- ------ ------- ------------ ... ----------- ----------- -----------\n",
-       "       0      0     0.0              ...         0.0         0.0         0.0\n",
-       "       0      0     0.0              ...         0.0         0.0         0.0\n",
-       "       0      0     0.0              ...         0.0         0.0         0.0\n",
-       "       0      0     0.0              ...         0.0         0.0         0.0\n",
-       "       0      0     0.0              ...         0.0         0.0         0.0\n",
-       "       0      0     0.0              ...         0.0         0.0         0.0\n",
-       "       0      0     0.0              ...         0.0         0.0         0.0\n",
-       "       0      0     0.0              ...         0.0         0.0         0.0\n",
-       "       0      0     0.0              ...         0.0         0.0         0.0\n",
-       "     ...    ...     ...          ... ...         ...         ...         ...\n",
-       "       0      0     0.0              ...         0.0         0.0         0.0\n",
-       "       0      0     0.0              ...         0.0         0.0         0.0\n",
-       "       0      0     0.0              ...         0.0         0.0         0.0\n",
-       "       0      0     0.0              ...         0.0         0.0         0.0\n",
-       "       0      0     0.0              ...         0.0         0.0         0.0\n",
-       "       0      0     0.0              ...         0.0         0.0         0.0\n",
-       "       0      0     0.0              ...         0.0         0.0         0.0\n",
-       "       0      0     0.0              ...         0.0         0.0         0.0\n",
-       "       0      0     0.0              ...         0.0         0.0         0.0\n",
-       "       0      0     0.0              ...         0.0         0.0         0.0"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "truth[0]"
    ]
   },
   {
