--- a/explore.ipynb
+++ b/explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,7 @@
     "import desitarget.mtl\n",
     "from desitarget.targetmask import desi_mask, obsconditions\n",
     "from collections import Counter\n",
+    "import subprocess\n",
     "%matplotlib inline"
    ]
   },
@@ -107,6 +108,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "writing sky\n",
+      "done writing sky\n"
+     ]
+    }
+   ],
+   "source": [
+    "sky_file = \"targets/subset_dr8_sky.fits\"\n",
+    "if not os.path.exists(skyfile):\n",
+    "    sky_data = Table.read(\"/project/projectdirs/desi/target/catalogs/dr8/0.31.0/skies/skies-dr8-0.31.0.fits\")\n",
+    "    subset_ii = (sky_data['RA']>145) & (sky_data['RA']<205)\n",
+    "    subset_ii &= (sky_data['DEC']>-5) & (sky_data['DEC']<25)\n",
+    "    print('writing sky')\n",
+    "    sky_data[subset_ii].write(sky_file, overwrite=True)\n",
+    "    print('done writing sky')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -115,12 +141,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['RA', 'DEC', 'TARGETID', 'DESI_TARGET', 'BGS_TARGET', 'MWS_TARGET', 'PRIORITY_INIT', 'SUBPRIORITY', 'NUMOBS_INIT', 'NUMOBS_MORE', 'PRIORITY', 'OBSCONDITIONS']\n",
+      "['TARGETID', 'MOCKID', 'TRUEZ', 'TRUESPECTYPE', 'TEMPLATETYPE', 'TEMPLATESUBTYPE', 'TEMPLATEID', 'SEED', 'MAG', 'MAGFILTER', 'FLUX_G', 'FLUX_R', 'FLUX_Z', 'FLUX_W1', 'FLUX_W2', 'FLUX_W3', 'FLUX_W4']\n",
+      "TARGETID\n",
+      "ELG 4555445\n",
+      "LRG 850729\n",
+      "QSO 505981\n",
+      "MWS_ANY 1647673\n",
+      "BGS_ANY 1131685\n",
+      "STD_FAINT 148247\n",
+      "STD_BRIGHT 70682\n",
+      "writing truth\n",
+      "done truth\n"
+     ]
+    }
+   ],
    "source": [
     "#truth file\n",
-    "truthfile = \"targets/truth.fits\"\n",
+    "truthfile = \"targets/subset_truth_dr8_mtl_dark_gray_northern_cap.fits\"\n",
     "if not os.path.exists(truthfile):\n",
     "    import desitarget.mock.mockmaker as mb\n",
     "    from desitarget.targetmask import desi_mask, bgs_mask, mws_mask\n",
@@ -161,6 +206,53 @@
     "    print('writing truth')\n",
     "    truth.write(truthfile, overwrite=True)\n",
     "    print('done truth')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tiles = Table(desimodel.io.load_tiles())\n",
+    "\n",
+    "ii_tiles = tiles['PROGRAM'] != 'BRIGHT'\n",
+    "ii_tiles &= tiles['RA'] > 150 \n",
+    "ii_tiles &= tiles['RA'] < 200\n",
+    "ii_tiles &= tiles['DEC'] > 0\n",
+    "ii_tiles &= tiles['DEC'] < 20\n",
+    "\n",
+    "tilefile = 'footprint/subset_dark123_gray.fits'\n",
+    "tiles[ii_tiles].write(tilefile, overwrite='True')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = subprocess.call([\"fba_run\", \"--targets\", new_mtl_file,'--sky', sky_file,'--footprint', tilefile,'--dir',  ' fiberassign', '--overwrite'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p"
    ]
   },
   {
