--- a/explore.ipynb
+++ b/explore.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,13 +308,13 @@
     "        if i_tile%20 ==0:\n",
     "            print(i_tile)\n",
     "        id_favail, header = fits.getdata(tile_file, 'FAVAIL', header=True)\n",
-    "        favail.extend(id_favail)\n",
+    "        favail.extend(id_favail['TARGETID'])\n",
     "    return list(set(favail))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -325,12 +325,130 @@
       "0\n",
       "20\n",
       "40\n",
-      "60\n"
+      "60\n",
+      "80\n",
+      "100\n",
+      "120\n",
+      "140\n",
+      "160\n",
+      "180\n",
+      "200\n",
+      "220\n",
+      "240\n",
+      "260\n",
+      "280\n",
+      "300\n",
+      "320\n",
+      "340\n",
+      "360\n",
+      "380\n",
+      "400\n",
+      "420\n",
+      "440\n",
+      "460\n",
+      "480\n",
+      "500\n",
+      "520\n",
+      "540\n",
+      "560\n",
+      "580\n",
+      "600\n",
+      "620\n"
      ]
     }
    ],
    "source": [
     "favail = consolidate_favail(fba_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ii_avail = np.in1d(targets['TARGETID'], favail)\n",
+    "targets_avail = targets[ii_avail]\n",
+    "\n",
+    "ii_avail = np.in1d(truth['TARGETID'], favail)\n",
+    "truth_avail = truth[ii_avail]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ii_zcat = np.in1d(targets['TARGETID'], zcat['TARGETID'])\n",
+    "targets_zcat = targets[ii_zcat]\n",
+    "\n",
+    "assert len(zcat)==len(targets_zcat)\n",
+    "assert len(truth_avail)==len(targets_avail)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8353255 4631070 2246453 4631070 2246453\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(targets), len(targets_avail), len(targets_zcat), len(truth_avail), len(zcat))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2551527 1507066\n"
+     ]
+    }
+   ],
+   "source": [
+    "target_class = 'LRG'\n",
+    "\n",
+    "is_class = (targets_avail['DESI_TARGET'] & desi_mask.mask(target_clas))!=0\n",
+    "targets_avail_class = targets_avail[is_class]\n",
+    "n_avail = len(targets_avail_class)\n",
+    "\n",
+    "is_class_in_zcat = np.in1d(targets_avail_class['TARGETID'], zcat['TARGETID'])\n",
+    "targets_zcat_class = targets_avail_class[is_class_in_zcat]\n",
+    "n_assigned = len(targets_zcat_class)\n",
+    "\n",
+    "print(n_avail, n_assigned)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "desi_mask.mask('ELG')"
    ]
   },
   {
