--- a/explore.ipynb
+++ b/explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "import desisim.quickcat\n",
     "from astropy.io import fits\n",
     "from astropy.table import Table, Column, vstack\n",
+    "import json\n",
     "\n",
     "\n",
     "from time import asctime\n",
@@ -215,8 +216,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fiberassign --mtl targets/subset_dr8_mtl_dark_gray_northern_cap.fits --sky targets/subset_dr8_sky.fits \n",
-    "# --footprint footprint/subset_dark123_gray.fits --outdir fiberassign/"
+    "#fiberassign --mtl targets/subset_dr8_mtl_dark_gray_northern_cap.fits --sky targets/subset_dr8_sky.fits --footprint footprint/subset_dark123_gray.fits --outdir fiberassign/\n",
+    "#fba_run_qa --dir fiberassign/ --footprint footprint/subset_dark123_gray.fits "
    ]
   },
   {
@@ -406,50 +407,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def global_efficiency(targets, id_avail, zcat, target_class='QSO'):\n",
+    "    ii_avail = np.in1d(targets['TARGETID'], id_avail)\n",
+    "    targets_avail = targets[ii_avail]\n",
+    "\n",
+    "\n",
+    "    is_class = (targets_avail['DESI_TARGET'] & desi_mask.mask(target_class))!=0\n",
+    "    targets_avail_class = targets_avail[is_class]\n",
+    "    n_avail = len(targets_avail_class)\n",
+    "\n",
+    "    is_class_from_zcat = np.in1d(targets_avail_class['TARGETID'], zcat['TARGETID'])\n",
+    "    targets_zcat_class = targets_avail_class[is_class_from_zcat]\n",
+    "    n_assigned = len(targets_zcat_class)\n",
+    "\n",
+    "    is_class_in_zcat = np.in1d(zcat['TARGETID'], targets_zcat_class['TARGETID'])\n",
+    "    zcat_class = zcat[is_class_in_zcat]\n",
+    "\n",
+    "    nobs = dict()\n",
+    "    for i in range(10):\n",
+    "        nobs[i] = np.count_nonzero(zcat_class['NUMOBS']==i)/n_avail\n",
+    "    nobs[0] = (n_avail - n_assigned)/n_avail\n",
+    "\n",
+    "    print(target_class, n_assigned/n_avail, n_avail, n_assigned, nobs)\n",
+    "    \n",
+    "def tile_efficiency(qa_json_file):\n",
+    "    f = open(qa_json_file)\n",
+    "    qa_dict = json.load(f)\n",
+    "    f.close()\n",
+    "    assign_total = []\n",
+    "    assign_science= []\n",
+    "    assign_sky = []\n",
+    "    assign_std = []\n",
+    "    for k in qa_dict:\n",
+    "        assign_total.append(qa_dict[k]['assign_total'])\n",
+    "        assign_science.append(qa_dict[k]['assign_science'])\n",
+    "        assign_sky.append(qa_dict[k]['assign_sky'])\n",
+    "        assign_std.append(qa_dict[k]['assign_std'])\n",
+    "    assign_total = np.array(assign_total)\n",
+    "    assign_science = np.array(assign_science)\n",
+    "    assign_sky = np.array(assign_sky)\n",
+    "    assign_std = np.array(assign_std)\n",
+    "    n_not_enough_sky = np.count_nonzero(assign_sky<400)\n",
+    "    n_not_enough_std = np.count_nonzero(assign_std<100)\n",
+    "    f_unassigned = (5000 - assign_total)/5000\n",
+    "    print(n_not_enough_sky, n_not_enough_std, np.median(f_unassigned))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2551527 1507066\n"
+      "QSO 0.9757944576061814 285761 278844 {0: 0.02420554239381861, 1: 0.16808451818127737, 2: 0.15990285588306313, 3: 0.23581244466529722, 4: 0.4119281497475163, 5: 5.599084549676128e-05, 6: 6.99885568709516e-06, 7: 3.49942784354758e-06, 8: 0.0, 9: 0.0}\n",
+      "LRG 0.8278671736931785 473611 392087 {0: 0.17213282630682142, 1: 0.6527698892128773, 2: 0.1750360527943819, 3: 2.533724934598225e-05, 4: 3.589443657347485e-05, 5: 0.0, 6: 0.0, 7: 0.0, 8: 0.0, 9: 0.0}\n",
+      "ELG 0.5906525778484806 2551527 1507066 {0: 0.4093474221515195, 1: 0.5680653193166288, 2: 0.002125002008601124, 3: 0.004575691340910757, 4: 0.01588656518233983, 5: 0.0, 6: 0.0, 7: 0.0, 8: 0.0, 9: 0.0}\n",
+      "LRG_2PASS 0.8616496205372374 131897 113649 {0: 0.1383503794627626, 1: 0.23318195258421343, 2: 0.628467667953024, 3: 0.0, 4: 0.0, 5: 0.0, 6: 0.0, 7: 0.0, 8: 0.0, 9: 0.0}\n"
      ]
     }
    ],
    "source": [
-    "target_class = 'LRG'\n",
-    "\n",
-    "is_class = (targets_avail['DESI_TARGET'] & desi_mask.mask(target_clas))!=0\n",
-    "targets_avail_class = targets_avail[is_class]\n",
-    "n_avail = len(targets_avail_class)\n",
-    "\n",
-    "is_class_in_zcat = np.in1d(targets_avail_class['TARGETID'], zcat['TARGETID'])\n",
-    "targets_zcat_class = targets_avail_class[is_class_in_zcat]\n",
-    "n_assigned = len(targets_zcat_class)\n",
-    "\n",
-    "print(n_avail, n_assigned)"
+    "tile_efficiency('fiberassign/fa_')\n",
+    "global_efficiency(targets, favail, zcat, target_class='QSO')\n",
+    "global_efficiency(targets, favail, zcat, target_class='LRG')\n",
+    "global_efficiency(targets, favail, zcat, target_class='ELG')\n",
+    "global_efficiency(targets, favail, zcat, target_class='LRG_2PASS')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 0.0\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "array([ 0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.0002,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ,\n",
+       "        0.    ,  0.    ,  0.    ,  0.    ,  0.    ,  0.    ])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "desi_mask.mask('ELG')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
